--- a/frontend/src/components/common/AttendeeDetails/AttendeeDetails.module.scss
+++ b/frontend/src/components/common/AttendeeDetails/AttendeeDetails.module.scss
@@ -8,7 +8,7 @@
 
   .block {
     width: 50%;
-    margin-bottom: var(--tk-spacing-md);
+    margin-bottom: var(--hi-spacing-md);
   }
 
   @include mixins.respond-below(md) {
