--- a/frontend/src/components/common/Card/CardHeading/CardHeading.module.scss
+++ b/frontend/src/components/common/Card/CardHeading/CardHeading.module.scss
@@ -1,10 +1,10 @@
 .wrapper {
   background: #ffffff;
-  padding: var(--tk-spacing-md) var(--tk-spacing-lg);
-  margin: calc(var(--tk-spacing-lg) * -1);
+  padding: var(--hi-spacing-md) var(--hi-spacing-lg);
+  margin: calc(var(--hi-spacing-lg) * -1);
   border-bottom: 1px solid #e3e3e3;
-  border-radius: var(--tk-radius-lg) var(--tk-radius-lg) 0 0;
-  margin-bottom: var(--tk-spacing-lg);
+  border-radius: var(--hi-radius-lg) var(--hi-radius-lg) 0 0;
+  margin-bottom: var(--hi-spacing-lg);
 
   .heading {
     margin: 0;
