--- a/frontend/src/components/common/Header/Header.module.scss
+++ b/frontend/src/components/common/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   height: 56px;
-  background-color: var(--tk-primary);
+  background-color: var(--hi-primary);
   border-bottom: 1px solid var(--mantine-color-gray-3);
 
 
