--- a/frontend/src/components/common/HomepageInfoMessage/HomepageInfoMessage.module.scss
+++ b/frontend/src/components/common/HomepageInfoMessage/HomepageInfoMessage.module.scss
@@ -13,7 +13,7 @@
   .iconContainer {
     background-color: #fff;
     border-radius: 130px;
-    border: 2px solid var(--tk-primary);
+    border: 2px solid var(--hi-primary);
     width: 180px;
     height: 180px;
     display: flex;
