--- a/frontend/src/components/common/PageTitle/PageTitle.module.scss
+++ b/frontend/src/components/common/PageTitle/PageTitle.module.scss
@@ -1,7 +1,7 @@
 @use "../../../styles/mixins.scss";
 
 .container {
-  margin-bottom: var(--tk-spacing-md);
+  margin-bottom: var(--hi-spacing-md);
 }
 
 .title {
@@ -15,7 +15,7 @@
 
 .subheading {
   font-size: 1rem;
-  color: var(--tk-color-text-muted, #6c757d);
+  color: var(--hi-color-text-muted, #6c757d);
   font-weight: normal;
   line-height: 1.4;
   margin-bottom: 20px;
