--- a/frontend/src/components/common/ProductsTable/ProductsTable.module.scss
+++ b/frontend/src/components/common/ProductsTable/ProductsTable.module.scss
@@ -3,8 +3,8 @@
 .sortableCategory {
   margin-bottom: 20px;
   transition: transform 250ms ease;
-  border-radius: var(--tk-radius-sm);
-  padding: var(--tk-spacing-lg);
+  border-radius: var(--hi-radius-sm);
+  padding: var(--hi-spacing-lg);
   box-shadow: 0 3px 0 #dddddd;
   border: 1px solid #e3e3e3;
   background-color: #ffffff;
@@ -80,7 +80,7 @@
 
 .productCard {
   box-sizing: border-box;
-  border-radius: var(--tk-radius-sm);
+  border-radius: var(--hi-radius-sm);
   border: 1px solid #e3e3e3;
   background-color: #ffffff;
   display: grid;
@@ -187,7 +187,7 @@
       }
 
       .price {
-        color: var(--tk-color-money-green);
+        color: var(--hi-color-money-green);
 
         .priceAmount {
           font-weight: 600;
@@ -228,7 +228,7 @@
 .dragPreview {
   background-color: #fff;
   border: 1px solid #e3e3e3;
-  border-radius: var(--tk-radius-sm);
+  border-radius: var(--hi-radius-sm);
   padding: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 
@@ -244,7 +244,7 @@
 
 .moreProducts {
   background-color: #f0f0f0;
-  border-radius: var(--tk-radius-sm);
+  border-radius: var(--hi-radius-sm);
   padding: 10px;
   margin-top: 10px;
   font-size: 14px;
