--- a/frontend/src/components/common/StatBoxes/StatBoxes.module.scss
+++ b/frontend/src/components/common/StatBoxes/StatBoxes.module.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
-  color: var(--tk-primary);
+  color: var(--hi-primary);
   margin: 0.5rem 0;
 
   @include mixins.respond-below(lg) {
@@ -50,7 +50,7 @@
 
     .description {
       font-size: 1rem;
-      color: var(--tk-color-gray-dark);
+      color: var(--hi-color-gray-dark);
       font-weight: 500;
       align-self: start;
     }
