--- a/frontend/src/components/common/Table/Table.module.scss
+++ b/frontend/src/components/common/Table/Table.module.scss
@@ -5,7 +5,7 @@
 
   th {
     background-color: #462e7812;
-    color: var(--tk-secondary-text) !important;
+    color: var(--hi-secondary-text) !important;
     padding: 0.75rem 0.625rem !important;
   }
 }
