--- a/frontend/src/components/common/TaxAndFeeList/TaxAndFeeList.module.scss
+++ b/frontend/src/components/common/TaxAndFeeList/TaxAndFeeList.module.scss
@@ -5,7 +5,7 @@
   margin-top: 20px;
 
   .taxBlock {
-    border: 2px solid var(--tk-color-gray-2);
+    border: 2px solid var(--hi-color-gray-2);
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -31,11 +31,11 @@
     }
 
     .header {
-      margin-bottom: var(--tk-spacing-sm);
+      margin-bottom: var(--hi-spacing-sm);
       background: #f1f1f1;
       text-transform: capitalize;
       color: #472e78;
-      border-radius: var(--tk-radius-xs) var(--tk-radius-xs) 0 0;
+      border-radius: var(--hi-radius-xs) var(--hi-radius-xs) 0 0;
       font-size: .8em;
       display: flex;
       padding: 8px 0 8px 13px;
@@ -54,7 +54,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: var(--tk-spacing-sm);
+      margin-bottom: var(--hi-spacing-sm);
       padding: 10px;
     }
   }
