--- a/frontend/src/components/common/WidgetEditor/WidgetEditor.module.scss
+++ b/frontend/src/components/common/WidgetEditor/WidgetEditor.module.scss
@@ -122,7 +122,7 @@
   top: 20px;
   min-height: 80vh;
   background-color: #ffffff;
-  border-radius: var(--tk-radius-lg);
+  border-radius: var(--hi-radius-lg);
   border: 1px solid #dbdbdb;
   overflow: hidden;
 }
