--- a/frontend/src/components/forms/ProductForm/ProductForm.module.scss
+++ b/frontend/src/components/forms/ProductForm/ProductForm.module.scss
@@ -1,6 +1,6 @@
 .priceTierCard {
   position: relative;
-  padding: var(--tk-spacing-md) var(--tk-spacing-lg);
+  padding: var(--hi-spacing-md) var(--hi-spacing-lg);
 
   .mantine-InputWrapper-root {
     margin-bottom: 0 !important;
