--- a/frontend/src/components/layouts/AuthLayout/Auth.module.scss
+++ b/frontend/src/components/layouts/AuthLayout/Auth.module.scss
@@ -180,7 +180,7 @@
     }
 
     a {
-      color: var(--tk-color-blue);
+      color: var(--hi-color-blue);
       text-decoration: none;
 
       &:hover {
