--- a/frontend/src/components/layouts/Checkout/Checkout.module.scss
+++ b/frontend/src/components/layouts/Checkout/Checkout.module.scss
@@ -41,7 +41,7 @@
       text-align: center;
 
       .actionBar {
-        padding: var(--tk-spacing-md);
+        padding: var(--hi-spacing-md);
         width: 100%;
 
         .title {
