--- a/frontend/src/components/layouts/Checkout/CheckoutFooter/CheckoutFooter.module.scss
+++ b/frontend/src/components/layouts/Checkout/CheckoutFooter/CheckoutFooter.module.scss
@@ -2,7 +2,7 @@
 
 .sidebar {
   width: auto !important;
-  border-radius: var(--tk-radius-md);
+  border-radius: var(--hi-radius-md);
   margin: 20px;
   overflow: hidden;
 }
@@ -35,7 +35,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: var(--tk-color-white);
+    background-color: var(--hi-color-white);
     padding: 10px;
     box-shadow: 0px -5px 5px 0 rgba(0, 0, 0, 0.0392156863);
     border-top: 1px solid #e0e0e0;
