--- a/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
@@ -4,7 +4,7 @@
   text-transform: uppercase;
   font-size: 1.1rem;
   font-weight: 600;
-  color: var(--homepage-secondary-color, var(--tk-color-black));
+  color: var(--homepage-secondary-color, var(--hi-color-black));
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -51,7 +51,7 @@
   }
 
   .shareButtons button {
-    color: var(--homepage-secondary-color, var(--tk-color-black));
+    color: var(--homepage-secondary-color, var(--hi-color-black));
   }
 
   @include mixins.respond-below(sm) {
@@ -95,7 +95,7 @@
       svg {
         place-self: flex-start;
         margin-right: 10px;
-        color: var(--homepage-secondary-color, var(--tk-primary));
+        color: var(--homepage-secondary-color, var(--hi-primary));
         min-width: 20px;
       }
     }
