--- a/frontend/src/components/modals/ChooseAccountModal/ChooseAccountModal.module.scss
+++ b/frontend/src/components/modals/ChooseAccountModal/ChooseAccountModal.module.scss
@@ -4,11 +4,11 @@
   align-items: center;
   cursor: pointer;
 
-  border: 1px solid var(--tk-color-gray-2);
-  margin-bottom: var(--tk-spacing-md);
-  border-radius: var(--tk-radius-md);
-  padding: var(--tk-spacing-md);
-  background-color: var(--tk-color-gray);
+  border: 1px solid var(--hi-color-gray-2);
+  margin-bottom: var(--hi-spacing-md);
+  border-radius: var(--hi-radius-md);
+  padding: var(--hi-spacing-md);
+  background-color: var(--hi-color-gray);
 
   &:hover {
     background-color: #f5f5f5;
