--- a/frontend/src/components/modals/RefundOrderModal/RefundOrderModal.module.scss
+++ b/frontend/src/components/modals/RefundOrderModal/RefundOrderModal.module.scss
@@ -6,8 +6,8 @@
   justify-content: space-between;
   margin-bottom: 20px;
   padding: 15px;
-  border-radius: var(--tk-radius-lg);
-  border: 3px solid var(--tk-secondary);
+  border-radius: var(--hi-radius-lg);
+  border: 3px solid var(--hi-secondary);
 
   @include mixins.respond-below(md) {
     flex-direction: column;
