--- a/frontend/src/components/routes/account/ManageAccount/ManageAccount.module.scss
+++ b/frontend/src/components/routes/account/ManageAccount/ManageAccount.module.scss
@@ -6,20 +6,20 @@
 
   .tabWrapper {
     position: relative;
-    margin-bottom: var(--tk-spacing-lg);
+    margin-bottom: var(--hi-spacing-lg);
 
     .tabContent {
       position: relative;
-      padding: var(--tk-spacing-lg);
+      padding: var(--hi-spacing-lg);
     }
 
     .feeExample {
-      padding: var(--tk-spacing-lg);
+      padding: var(--hi-spacing-lg);
     }
   }
 
   .footer {
-    margin-top: var(--tk-spacing-xl);
+    margin-top: var(--hi-spacing-xl);
   }
 
   .card {
@@ -29,7 +29,7 @@
   .heading {
     font-size: 1.1em;
     font-weight: 600;
-    color: var(--tk-primary);
+    color: var(--hi-primary);
   }
 
   .subHeading {
