--- a/frontend/src/components/routes/account/ManageAccount/sections/PaymentSettings/PaymentSettings.module.scss
+++ b/frontend/src/components/routes/account/ManageAccount/sections/PaymentSettings/PaymentSettings.module.scss
@@ -5,7 +5,7 @@
   }
 
   p {
-    color: var(--tk-color-gray-dark);
+    color: var(--hi-color-gray-dark);
 
     &:last-child {
       margin-bottom: 0;
