--- a/frontend/src/components/routes/event/Reports/Reports.module.scss
+++ b/frontend/src/components/routes/event/Reports/Reports.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     font-size: 1.5em;
-    color: var(--tk-primary);
+    color: var(--hi-primary);
     flex-shrink: 0;
   }
 
