--- a/frontend/src/components/routes/product-widget/OrderSummaryAndProducts/OrderSummaryAndProducts.module.scss
+++ b/frontend/src/components/routes/product-widget/OrderSummaryAndProducts/OrderSummaryAndProducts.module.scss
@@ -9,7 +9,7 @@
 
 .actionBar {
   background-color: #800080;
-  padding: var(--tk-spacing-md);
+  padding: var(--hi-spacing-md);
   color: #fff;
 }
 
@@ -24,8 +24,8 @@
 }
 
 .orderSummaryContainer {
-  padding: var(--tk-spacing-lg);
-  border-radius: var(--tk-radius-lg);
+  padding: var(--hi-spacing-lg);
+  border-radius: var(--hi-radius-lg);
   background-color: #fff9ff;
   border: 1px solid #800080;
 }
