--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -62,7 +62,7 @@ $breakpoints: (
 
 @mixin scrollbar() {
   scrollbar-width: thin;
-  scrollbar-color: var(--tk-secondary) transparent;
+  scrollbar-color: var(--hi-scrollbar-thumb) transparent;
 
   &::-webkit-scrollbar {
     width: 5px;
@@ -76,7 +76,7 @@ $breakpoints: (
   }
 
   &:hover::-webkit-scrollbar-thumb {
-    background-color: var(--tk-secondary);
+    background-color: var(--hi-scrollbar-thumb);
   }
 
   &::-webkit-scrollbar-track {
