--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -3,12 +3,12 @@
 }
 
 .hi-product-widget-container {
-  background-color: var(--widget-background-color, var(--tk-color-white));
+  background-color: var(--widget-background-color, var(--hi-color-white));
   color: var(--widget-primary-text-color);
-  padding: var(--widget-padding, var(--tk-spacing-md));
+  padding: var(--widget-padding, var(--hi-spacing-md));
 
   a, button {
-    color: var(--widget-primary-text-color, var(--tk-primary));
+    color: var(--widget-primary-text-color, var(--hi-primary));
   }
 
   .hi-product-rows {
@@ -20,7 +20,7 @@
     .hi-product-row {
       display: flex;
       flex-flow: column;
-      border: 3px solid var(--widget-primary-color, var(--tk-secondary));
+      border: 3px solid var(--widget-primary-color, var(--hi-secondary));
       border-radius: 5px;
 
       .hi-product-description-row {
@@ -56,7 +56,7 @@
 
           .hi-product-collapse-arrow {
             display: flex;
-            color: var(--widget-secondary-color, var(--tk-primary));
+            color: var(--widget-secondary-color, var(--hi-primary));
             margin-left: 10px;
 
             svg {
@@ -88,9 +88,9 @@
       }
 
       .hi-product-quantity-error {
-        color: var(--widget-primary-color, var(--tk-primary));
-        background-color: var(--widget-background-color, var(--tk-color-white));
-        border: 2px solid var(--widget-primary-color, var(--tk-primary));
+        color: var(--widget-primary-color, var(--hi-primary));
+        background-color: var(--widget-background-color, var(--hi-color-white));
+        border: 2px solid var(--widget-primary-color, var(--hi-primary));
         padding: 10px 20px;
         margin: 10px 0;
         border-radius: 5px;
@@ -116,9 +116,9 @@
 
             .hi-donation-input-wrapper {
               .hi-donation-input {
-                color: var(--widget-primary-text-color, var(--tk-primary));
-                background-color: var(--widget-background-color, var(--tk-color-white));
-                border: 2px solid var(--widget-primary-color, var(--tk-primary));
+                color: var(--widget-primary-text-color, var(--hi-primary));
+                background-color: var(--widget-background-color, var(--hi-color-white));
+                border: 2px solid var(--widget-primary-color, var(--hi-primary));
               }
             }
           }
@@ -127,7 +127,7 @@
         .hi-product-quantity-selector {
           .button-input {
             input {
-              color: var(--widget-primary-text-color, var(--tk-primary));
+              color: var(--widget-primary-text-color, var(--hi-primary));
             }
 
             button {
@@ -136,20 +136,20 @@
                 opacity: .5;
               }
 
-              background-color: var(--widget-secondary-color, var(--tk-primary));
-              color: var(--widget-secondary-text-color, var(--tk-color-white));
+              background-color: var(--widget-secondary-color, var(--hi-primary));
+              color: var(--widget-secondary-text-color, var(--hi-color-white));
             }
           }
 
           .select-input {
             input {
-              background-color: var(--widget-background-color, var(--tk-color-white));
-              border: 2px solid var(--widget-primary-color, var(--tk-primary));
-              color: var(--widget-primary-text-color, var(--tk-primary));
+              background-color: var(--widget-background-color, var(--hi-color-white));
+              border: 2px solid var(--widget-primary-color, var(--hi-primary));
+              color: var(--widget-primary-text-color, var(--hi-primary));
             }
 
             svg {
-              color: var(--widget-primary-text-color, var(--tk-primary));
+              color: var(--widget-primary-text-color, var(--hi-primary));
             }
           }
         }
@@ -166,21 +166,21 @@
     .hi-promo-code-input {
       flex: 1;
       margin-right: 20px;
-      background: var(--widget-background-color, var(--tk-color-white));
-      border: 2px solid var(--widget-primary-color, var(--tk-primary));
-      color: var(--widget-primary-text-color, var(--tk-primary));
+      background: var(--widget-background-color, var(--hi-color-white));
+      border: 2px solid var(--widget-primary-color, var(--hi-primary));
+      color: var(--widget-primary-text-color, var(--hi-primary));
     }
 
     .hi-apply-promo-code-button {
       width: 200px;
-      background-color: var(--widget-secondary-color, var(--tk-primary));
-      color: var(--widget-secondary-text-color, var(--tk-color-white));
+      background-color: var(--widget-secondary-color, var(--hi-primary));
+      color: var(--widget-secondary-text-color, var(--hi-color-white));
       border: none;
     }
 
     .hi-close-promo-code-input-button {
-        background-color: var(--widget-secondary-color, var(--tk-primary));
-        color: var(--widget-secondary-text-color, var(--tk-color-white));
+        background-color: var(--widget-secondary-color, var(--hi-primary));
+        color: var(--widget-secondary-text-color, var(--hi-color-white));
         border: none;
     }
 
@@ -203,12 +203,12 @@
       margin-bottom: 20px;
       padding: 10px 20px;
       border-radius: 5px;
-      background-color: var(--widget-secondary-color, var(--tk-secondary));
+      background-color: var(--widget-secondary-color, var(--hi-secondary));
     }
 
     .hi-continue-button {
-      background-color: var(--widget-secondary-color, var(--tk-primary));
-      color: var(--widget-secondary-text-color, var(--tk-color-white));
+      background-color: var(--widget-secondary-color, var(--hi-primary));
+      color: var(--widget-secondary-text-color, var(--hi-color-white));
     }
   }
 }
