--- a/frontend/src/components/routes/profile/ManageProfile/ManageProfile.module.scss
+++ b/frontend/src/components/routes/profile/ManageProfile/ManageProfile.module.scss
@@ -1,20 +1,20 @@
 .container {
-  margin-bottom: var(--tk-spacing-xl);
+  margin-bottom: var(--hi-spacing-xl);
 
   .tabsCard {
     padding: 0;
   }
 
   .emailChangeAlert {
-    margin-bottom: var(--tk-spacing-lg);
+    margin-bottom: var(--hi-spacing-lg);
   }
 
   .tabWrapper {
-    padding: var(--tk-spacing-xl);
+    padding: var(--hi-spacing-xl);
   }
 }
 
 .emailNotVerified {
-  margin-bottom: var(--tk-spacing-lg);
+  margin-bottom: var(--hi-spacing-lg);
 }
 
