--- a/frontend/src/components/layouts/AppLayout/AppLayout.module.scss
+++ b/frontend/src/components/layouts/AppLayout/AppLayout.module.scss
@@ -27,7 +27,7 @@
 
   .main {
     grid-area: main;
-    padding: var(--tk-spacing-lg);
+    padding: var(--hi-spacing-lg);
     overflow: auto;
     background-color: #f9fafc;
 
@@ -37,7 +37,7 @@
   .sidebarOpen {
     width: 28px;
     height: 28px;
-    background: var(--tk-primary);
+    background: var(--hi-primary);
     color: white;
     border-radius: 50%;
     display: flex;
