--- a/frontend/src/components/layouts/AppLayout/Sidebar/Sidebar.module.scss
+++ b/frontend/src/components/layouts/AppLayout/Sidebar/Sidebar.module.scss
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   grid-area: sidebar;
-  background: linear-gradient(180deg, var(--tk-primary), #5a1065);
-  color: var(--tk-color-white);
+  background: linear-gradient(180deg, var(--mantine-color-primary-9), var(--mantine-color-secondary-9));
+  color: var(--hi-color-white);
   position: relative;
   box-shadow: 4px 0 16px rgba(0, 0, 0, 0.1);
   height: 100vh;
@@ -82,7 +82,7 @@
       padding: 4px 10px;
       text-decoration: none;
       margin: 3px 10px;
-      border-radius: var(--tk-radius-md);
+      border-radius: var(--hi-radius-md);
       font-size: 0.9em;
       font-weight: 500;
       transition: all 0.2s ease;
@@ -95,7 +95,7 @@
       text-align: left;
 
       .navBadge {
-        background: var(--tk-primary);
+        background: var(--hi-primary);
         color: white;
         padding: 2px 6px;
         border-radius: 12px;
