--- a/frontend/src/components/layouts/AppLayout/Topbar/Topbar.module.scss
+++ b/frontend/src/components/layouts/AppLayout/Topbar/Topbar.module.scss
@@ -2,7 +2,7 @@
 
 .topBar {
   grid-area: topbar;
-  background: linear-gradient(90deg, var(--tk-primary), #5a1065);
+  background: linear-gradient(90deg, var(--mantine-color-primary-9), var(--mantine-color-secondary-9));
   display: flex;
   flex-direction: column;
   transition: box-shadow 0.3s ease;
@@ -13,12 +13,12 @@
   .topBarMain {
     display: flex;
     align-items: center;
-    padding: var(--tk-spacing-md);
+    padding: var(--hi-spacing-md);
     height: 60px;
   }
 
   .breadcrumbsRow {
-    padding: 6px var(--tk-spacing-md) 8px;
+    padding: 6px var(--hi-spacing-md) 8px;
     padding-top: 7px;
     border-top: 1px solid rgba(0, 0, 0, 0.05);
     background-color: #fff;
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-top-left-radius: var(--tk-radius-md);
+    border-top-left-radius: var(--hi-radius-md);
     box-shadow: 3px 0px 8px rgb(0 0 0 / 8%);
     position: relative;
     z-index: 5;
@@ -58,7 +58,7 @@
     display: flex;
     align-items: center;
     font-size: 0.85rem;
-    color: var(--tk-text-light);
+    color: var(--hi-text-light);
     width: 100%;
     overflow-x: auto;
     white-space: nowrap;
@@ -70,16 +70,16 @@
     }
 
     a {
-      color: var(--tk-text-light);
+      color: var(--hi-text-light);
       transition: color 0.2s ease;
       position: relative;
 
       &:hover {
-        color: var(--tk-text);
+        color: var(--hi-text);
       }
 
       &:last-child {
-        color: var(--tk-text);
+        color: var(--hi-text);
         font-weight: 600;
       }
 
@@ -90,7 +90,7 @@
         left: 0;
         width: 0;
         height: 1px;
-        background-color: var(--tk-primary);
+        background-color: var(--hi-primary);
         transition: width 0.2s ease;
       }
 
@@ -123,14 +123,14 @@
   }
 
   .burger {
-    --burger-color: var(--tk-color-white);
+    --burger-color: var(--hi-color-white);
     @include mixins.respond-above(md) {
       display: none;
     }
   }
 
   .logo {
-    color: var(--tk-color-white);
+    color: var(--hi-color-white);
     font-weight: bold;
     font-size: 1.2em;
     display: flex;
@@ -152,12 +152,12 @@
   .menu {
     display: flex;
     align-items: center;
-    color: var(--tk-color-white);
+    color: var(--hi-color-white);
   }
 
   @include mixins.respond-below(md) {
     .topBarMain {
-      background: linear-gradient(90deg, var(--tk-primary), #5a1065);
+      background: linear-gradient(90deg, var(--mantine-color-primary-9), var(--mantine-color-secondary-9));
     }
   }
 
