Feature: Add contact organizer form. i18n. Clean styles

--- a/frontend/src/components/layouts/AppLayout/Topbar/Topbar.module.scss
+++ b/frontend/src/components/layouts/AppLayout/Topbar/Topbar.module.scss
@@ -142,6 +142,10 @@
 
     img {
       max-width: 120px;
+
+      @include mixins.respond-below(sm) {
+        max-width: 100px;
+      }
     }
 
     @include mixins.respond-above(md) {
