feat: add padding between burger and logo

--- a/frontend/src/components/layouts/AppLayout/Topbar/Topbar.module.scss
+++ b/frontend/src/components/layouts/AppLayout/Topbar/Topbar.module.scss
@@ -135,6 +135,7 @@
     font-size: 1.2em;
     display: flex;
     justify-content: center;
+    padding-inline: var(--mantine-spacing-xs);
 
     a {
       display: flex;
