--- a/frontend/src/components/layouts/CheckIn/CheckIn.module.scss
+++ b/frontend/src/components/layouts/CheckIn/CheckIn.module.scss
@@ -33,7 +33,7 @@
 
     .searchBar {
       display: flex;
-      gap: 20px;
+      gap: 6px;
       align-items: center;
 
       .searchInput {
@@ -79,6 +79,9 @@
 
     .details {
       flex: 1;
+      gap: 5px;
+      display: flex;
+      flex-direction: column;
 
       .awaitingPayment {
         margin: 3px 0;
@@ -88,10 +91,11 @@
 
       .product {
         color: #999;
-        font-size: 0.9em;
+        font-size: 1em;
         display: flex;
         align-items: center;
         gap: 5px;
+        vertical-align: middle;
       }
     }
 
